--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,5 +8,14 @@
   <%= @post.content %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<p>
+  <strong>User:</strong>
+  <%= @post.user.first_name %>
+</p>
+
+<% if @post.user_id == current_user.id %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Destroy', post_path(@post), method: :delete, data: { confirm: '削除しますか？'} %>
+<% else %>
+  <%= link_to 'Back', posts_path %>
+<% end %>
