--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,8 +29,8 @@
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-item"><%# "#{current_user.last_name} #{current_user.first_name}" %></div>
             <div class="dropdown-divider"></div>
-            <%= link_to 'プロフィール', '#', class: 'dropdown-item' %>
-            <%= link_to 'ログアウト', '#', class: 'dropdown-item' %>
+            <%= link_to 'プロフィール', user_path(current_user), class: 'dropdown-item' %>
+            <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', method: :delete %>
           </div>
         </li>
       </ul>
