--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,9 +15,8 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
-        <td><%= post.user.first_name %></td>
         <td><%= link_to 'Show', post %></td>
-        <% if post.user_id == current_user.id %>
+        <% if current_user.mine?(post) %>
           <td><%= link_to 'Edit', edit_post_path(post) %></td>
           <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
