--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New User</h1>
+<div class="container">
+  <%= render 'form', user: @user %>
 
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+  <%= link_to 'Back', users_path %>
+</div>
