課題5 i18nによる日本語化対応

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
       <%= render 'shared/before_login_header' %>
     <% end %>
     <%= render 'shared/flash_message' %>
+    <div class="container">
     <%= yield %>
+    </div>
     <%= render 'shared/footer' %>
   </body>
 </html>
