--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,25 +2,23 @@
 
 <h1>Users</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th>last_name</th>
+      <th>first_name</th>
       <th>Email</th>
-      <th>Crypted password</th>
-      <th>Salt</th>
-      <th colspan="3"></th>
+      <th>created_at</th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= user.last_name %></td>
+        <td><%= user.first_name %></td>
         <td><%= user.email %></td>
-        <td><%= user.crypted_password %></td>
-        <td><%= user.salt %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= l user.created_at, format: :long %></td>
       </tr>
     <% end %>
   </tbody>
