--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Boards#new</h1>
-<p>Find me in app/views/boards/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <h1>掲示板作成</h1>
+      <%= form_with model: @board, local: true do |f| %>
+
+        <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, class: 'form-control', rows: 10 %>
+        </div>
+
+        <div class="actions">
+        <%= f.submit (t 'board.new.create'), class: 'btn btn-primary' %>
+        </div>
+
+      <% end %>
+    </div>
+  </div>
+</div>
