--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -2,23 +2,7 @@
   <div class="row">
     <div class="col-lg-8 offset-lg-2">
       <h1>掲示板作成</h1>
-      <%= form_with model: @board, local: true do |f| %>
-
-        <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, class: 'form-control', rows: 10 %>
-        </div>
-
-        <div class="actions">
-        <%= f.submit (t 'board.new.create'), class: 'btn btn-primary' %>
-        </div>
-
-      <% end %>
+      <%= render partial: 'form', locals: { board: @board } %>
     </div>
   </div>
 </div>
