--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,14 +1,25 @@
-      <%= form_with model: board, local: true do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <div class="form-group">
-          <%= f.label :title %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
+<%= form_with model: board, local: true do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control' %>
+  </div>
 
-        <div class="form-group">
-          <%= f.label :body %>
-          <%= f.text_area :body, class: 'form-control', rows: 10 %>
-        </div>
+  <div class="form-group">
+    <%= f.label :body %>
+    <%= f.text_area :body, class: 'form-control', rows: 10 %>
+  </div>
 
-        <%= f.submit (t 'board.new.create'), class: 'btn btn-primary' %>
-      <% end %>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+    <%= f.hidden_field :board_image_cache %>
+  </div>
+  <div class='form-group'>
+    <%= image_tag board.image.url,
+            id: 'preview',
+            size: '300x200' %>
+  </div>
+
+  <%= f.submit (t 'board.new.create'), class: 'btn btn-primary' %>
+<% end %>
