タイトルを動的に出力する

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,15 @@
-<%= form_with model: comment, url:[board, comment], local: true do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <div class="form-group">
-    <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', rows: 10 %>
-  </div>
+<div class="container pt-5">
+  <div class="row mb-3">
+    <div class="col-lg-8 offset-lg-2">
+      <%= form_with model: comment, url:[board, comment], local: true do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <div class="form-group">
+          <%= f.label :body %>
+          <%= f.text_area :body, class: 'form-control', rows: 10 %>
+        </div>
 
-  <%= f.submit (t 'comment.new.create'), class: 'btn btn-primary' %>
-<% end %>
+        <%= f.submit (t 'comment.new.create'), class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+</div>
