--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<h1><%= t '.title' %></h1>
+<% content_for(:title, t('users.new.title')) %>
+<h1><%= t 'users.new.title' %></h1>
 <%= form_with model: user, local: true do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="form-group">
@@ -27,7 +28,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit (t 'users.new.create'), class: 'btn btn-primary' %>
+    <%= f.submit (t 'users.new.title'), class: 'btn btn-primary' %>
   </div>
 <% end %>
 <div class='text-center'>
