--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -21,5 +21,5 @@
             size: '300x200' %>
   </div>
 
-  <%= f.submit (t 'board.new.create'), class: 'btn btn-primary' %>
+  <%= f.submit (t 'boards.new.submit'), class: 'btn btn-primary' %>
 <% end %>
