--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t('.title')) %>
+<% content_for(:title, @board.title) %>
 <div class="container pt-5">
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
@@ -16,6 +16,7 @@
                 <li class="list-inline-item">by <%= @board.user.decorate.full_name %></li>
                 <li class="list-inline-item"><%= l @board.created_at, format: :long  %></li>
               </ul>
+              <%= render 'crud_menus', board: @board if current_user.own?(@board) %>
             </div>
           </div>
           <p><%= simple_format(@board.body) %></p>
