--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,9 @@
 <div class="container pt-5">
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
-      <%= form_with model: comment, url:[board, comment], local: true do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <div class="form-group">
-          <%= f.label :body %>
-          <%= f.text_area :body, class: 'form-control', rows: 10 %>
-        </div>
-
+      <%= form_with model: comment, url:[board, comment], id: 'new_comment' do |f| %>
+        <%= f.label :body %>
+        <%= f.text_area :body, class: 'form-control mb-3', id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body) %>
         <%= f.submit (t 'comment.new.create'), class: 'btn btn-primary' %>
       <% end %>
     </div>
