--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,7 +31,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-item"><%= "#{current_user.decorate.full_name}" %></div>
             <div class="dropdown-divider"></div>
-            <%= link_to 'プロフィール', '#', class: 'dropdown-item' %>
+            <%= link_to 'プロフィール', profile_path(current_user), class: 'dropdown-item' %>
             <%= link_to (t 'defaults.logout'), logout_path, method: :delete, class: 'dropdown-item' %>
           </div>
         </li>
