--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -15,7 +15,7 @@
         </tr>
         <tr>
           <th scope="row"><%= t(User.human_attribute_name(:avatar)) %></th>
-          <td><%= image_tag current_user.avatar.url, class: 'rounded-circle', size: '50x50'%></td>
+          <td><%= image_tag current_user.avatar.url,  %></td>
         </tr>
       </table>
     </div>
